Api for subscribers from service, including swagger doc
